@@ -1,3 +1,9 @@
+2006-01-17 Paul Jakma <paul.jakma@sun.com>
+
+	* ospf_packet.c: (ospf_verify_header) print out the types
+	  involved if there's a mismatch.
+	* ospf_zebra.c: (ospf_zebra_add) Adjust to new zserv format.
+
 2006-01-10 Len Sorensen <lennartsorensen@ruggedcom.com>
 
 	* (general) Bug #234, see also [quagga-dev 3902].
